updated > LogoUpdate.js >> removed className='addLogo' and associated .addLogo from _logo.less >>> fixed spacing and centered the two components

--- a/src/less/_logo.less
+++ b/src/less/_logo.less
@@ -7,7 +7,8 @@
 }
 
 .addLogo {
-  width: 48%;
+  border: 2px dashed blue;
+  width: 22%;
   margin: 0 auto;
   @media (max-width: 600px) {
     margin-bottom: 6rem;
@@ -28,9 +29,11 @@
 }
 
 .brandForms {
+  border: 2px dashed red;
   width: 95%;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-evenly;
+  // align-items: center;
   margin: 1.5rem auto;
   padding: 1.5rem;
   background: white;
@@ -40,6 +43,14 @@
     align-items: center;
     margin: 0.2rem auto;
   }
+}
+
+.colorPicker {
+  border: 2px dashed black;
+  width: 22%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .logoPic {
